resources/curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl
spec:
  containers:
    - name: curl
      image: appropriate/curl
      command:
        - sh
      args:
        - -c
        - sleep 600
