resources/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
  labels:
    app: kuard
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: http
  selector:
    app: kuard
